# NearManager

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  install.ps1  install.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  performance.yml  qualification.yml  release-api.yml  release.yml
apps/near-demo/: Cargo.toml
apps/near-fm/: Cargo.toml
apps/near-fm/src/: config.rs  main.rs  platform.rs  plugins.rs
apps/near-fm/tests/: external_handoff.rs  shell_close_policy.rs
apps/near-input-probe/: Cargo.toml
apps/near-input-probe/src/: main.rs
apps/near-proc/: Cargo.toml
apps/near-proc/src/: main.rs
apps/near-proc/tests/: boundary.rs
apps/near-view/: Cargo.toml
apps/near-view/src/: main.rs
apps/near-view/tests/: cli.rs  pty.rs
assets/farmanager-ux/: README.md  manifest.csv
crates/near-app/: Cargo.toml
crates/near-app/src/: lib.rs
crates/near-archive/: Cargo.toml
crates/near-config/: Cargo.toml
crates/near-core/: Cargo.toml
crates/near-handlers/: Cargo.toml
crates/near-handlers/src/: lib.rs
crates/near-handlers/tests/fixtures/: handlers-v1.toml
crates/near-local-fs/: Cargo.toml
crates/near-local-fs/src/: device.rs  lib.rs
crates/near-macros/: Cargo.toml
crates/near-ops/: Cargo.toml
crates/near-ops/src/: lib.rs
crates/near-plugins/: Cargo.toml
crates/near-plugins/src/: lib.rs  process.rs
crates/near-plugins/tests/fixtures/: host-calls-component.wat
crates/near-pty/: Cargo.toml
crates/near-pty/src/: lib.rs
crates/near-reference-providers/: Cargo.toml
crates/near-reference-providers/src/: lib.rs
crates/near-runtime/: Cargo.toml
crates/near-runtime/src/: lib.rs
crates/near-search/: Cargo.toml
crates/near-search/src/: lib.rs
crates/near-search/tests/fixtures/: predicate-v1.toml
crates/near-sftp/: Cargo.toml
crates/near-sftp/src/: lib.rs
crates/near-terminal/: Cargo.toml
crates/near-terminal/src/: input.rs  lib.rs  reactor.rs  session.rs  signal.rs
crates/near-testkit/: Cargo.toml
crates/near-testkit/src/: lib.rs
crates/near-testkit/tests/: performance.rs
crates/near-ui/: Cargo.toml
crates/near-ui/src/: application.rs  catalog_tests.rs  collection.rs  command.rs  command_history.rs  command_line.rs  confirmation.rs  dialog.rs  editor.rs  filter.rs  folder_history.rs  help.rs  highlighting.rs  inspector.rs  interaction_kernel.rs  interface_settings.rs  keymap.rs  layout.rs  lib.rs  list_navigation.rs  menu.rs  operation_preview.rs  panel_mode.rs  render_loop.rs  resource_history.rs  scene.rs  scene_renderer.rs  selection_search.rs  semantic.rs  settings_surface.rs  shell.rs  surface.rs  tab_registry.rs  task.rs  terminal_surface.rs  theme.rs  tree.rs  viewer.rs  workspace.rs  workspace_diagnostics.rs  (+6 more)
crates/near-ui/tests/: confirmation.rs  document_presentation.rs  interaction_kernel.rs  interface_settings.rs  keymap.rs  panel_mode.rs  resource_presentation.rs  settings_provenance.rs
docs/: INSTALL.md  far-parity-roadmap.md  farmanager-3-advanced-workflows.md  farmanager-3-bundled-plugins.md  farmanager-3-coverage-audit.md  farmanager-3-file-operations-and-search.md  farmanager-3-hotkeys.md  farmanager-3-luamacro.md  farmanager-3-research.md  farmanager-3-settings.md  farmanager-3-startup-and-environment.md  farmanager-3-topic-inventory.md  farmanager-3-visual-coverage.md  near-accessibility.md  near-agent-abstraction-policy.md  near-api-compatibility.md  near-application-authoring.md  near-archives.md  near-command-prefixes.md  near-configuration.md  near-confirmation-policy.md  near-deletion.md  near-descriptions.md  near-device-panels.md  near-diagnostics.md  near-elevation.md  near-embedded-pty.md  near-filters.md  near-generated-panels.md  near-handlers.md  near-help.md  near-implementation-plan.md  near-interaction-settings-gap-audit.md  near-internal-editor.md  near-local-filesystem.md  near-macros.md  near-menu-hierarchy.md  near-modal-selection-search.md  near-mouse-interaction.md  near-operations.md  (+22 more)
docs/assets/: near-manager-preview-shell.toml  near-manager-preview.tape
docs/releases/: README.md  v0.1.0.md  v0.2.0.md
docs/security/: vulnerability-exceptions.md
project/: README.md  capabilities.toml  far-parity.toml  milestones.toml  requirements.toml  risks.toml  workflows.toml
project/architecture/: README.md
project/decisions/: 0000-template.md  0001-docs-as-code-governance.md  0002-semantic-command-resource-model.md  0003-contextual-keymap-language.md  0004-semantic-theme-system.md  0005-ratatui-as-private-substrate.md  0006-suspend-before-embedded-pty.md  0007-tiered-extension-model.md
project/evidence/: FAR-EXT-005.md  FAR-PLAT-004.md  FAR-SEARCH-003.md  M1-async-runtime.md  (+43 more)
specs/: abstraction-ownership.toml  architecture-budgets.toml  capability-budgets.toml  confirmations.toml  connections.toml  descriptions.toml  editor.toml  far-behavior-contract.toml  filters.toml  github-actions-policy.toml  handlers-linux.toml  handlers-windows.toml  handlers.toml  highlighting.toml  history.toml  interaction-conformance.toml  interface.toml  keymap.toml  macros.toml  menu-actions.toml  operator-workflows.toml  panel-modes.toml  plugin.wit  process-plugin-v0.1.0.md  qualification.toml  shell.toml  theme-high-contrast.toml  theme-terminal-native.toml  theme.toml  user-menu.toml  viewer.toml
tools/: check_architecture_budgets.py  check_process_protocol.py  check_public_api.py  check_wit.py  generate_sbom.py  measure_capability_artifacts.py  operator_session.py  package_release.py  qualify.py  run_workflow_prechecks.py  test_idle_cpu.py  test_installers.py  test_linux_mount_safety.py  test_macos_mount_safety.py  test_qualification_status.py  test_release_packaging.py  test_sbom.py  test_tmux_terminal_workflows.py  validate_abstraction_policy.py  validate_far_behavior_contract.py  validate_far_parity.py  validate_github_actions_policy.py  validate_interaction_conformance.py  validate_menu_actions.py  validate_project.py  validate_release.py  validate_tui_proof.py  workflow_evidence.py
(+28 files in other folders)
