[package]
name = "near-input-probe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
crossterm.workspace = true
near-terminal = { path = "../../crates/near-terminal" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
