[package]
name = "near-view"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
near-app = { path = "../../crates/near-app" }
near-local-fs = { path = "../../crates/near-local-fs" }
near-reference-providers = { path = "../../crates/near-reference-providers" }

[lints]
workspace = true

[dev-dependencies]
near-local-fs = { path = "../../crates/near-local-fs" }
