[package]
name = "near-local-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
near-core = { path = "../near-core" }
near-handlers = { path = "../near-handlers" }
near-ops = { path = "../near-ops" }
near-search = { path = "../near-search" }
serde.workspace = true
sha2.workspace = true
toml.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSError", "NSFileManager", "NSString", "NSURL"] }

[lints]
workspace = true
