[package]
name = "near-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
near-core = { path = "../near-core" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
