[package]
name = "near-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
near-core = { path = "../near-core" }
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
wasmtime.workspace = true
wit-parser.workspace = true

[lints]
workspace = true
