[package]
name = "near-reference-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
near-core = { path = "../near-core" }

[dev-dependencies]
near-local-fs = { path = "../near-local-fs" }
near-ui = { path = "../near-ui" }

[lints]
workspace = true
