[package]
name = "near-sftp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
near-core = { path = "../near-core" }
near-local-fs = { path = "../near-local-fs" }
near-ops = { path = "../near-ops" }
serde.workspace = true
ssh2.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
