[package]
name = "near-terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
crossterm.workspace = true
near-core = { path = "../near-core" }
serde.workspace = true
signal-hook.workspace = true
terminal_size.workspace = true
thiserror.workspace = true

[target.'cfg(unix)'.dependencies]
mio.workspace = true
rustix.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
